# jekko

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  JANKURAI_TASKLIST.md  Justfile  MEMORY_SYSTEM_LEVELUP.md  README.md  TUI_UPGRADE.md  ZYAL_MISSION.md  ZYAL_WORKFLOW.md  achat.md  agent_chat.md  check-zyal.mjs  ci-fast-push.sh  jekko_agent.md  package.json
crates/jankurai-runner/: Cargo.toml
crates/jankurai-runner/src/: bootstrap_check.rs  classifier.rs  commit.rs  daemon_store.rs  dag.rs  empty_response_tracker.rs  events.rs  hero_judge.rs  hero_judge_eval.rs  hero_judge_eval_metrics.rs  hero_judge_runner.rs  hero_judge_runner_artifacts.rs  hero_judge_runner_completion.rs  hero_judge_runner_finalize.rs  hero_judge_runner_flow.rs  hero_judge_runner_helpers.rs  lib.rs  locks.rs  main.rs  model_client.rs  model_policy.rs  parity_lab.rs  port.rs  port_runner.rs  reasoning.rs  reasoning_artifacts.rs  reasoning_benchmark.rs  reasoning_io.rs  reasoning_runner.rs  receipts.rs  repo_graph.rs  rollback.rs  run_summary.rs  runner.rs  stage0_proof.rs  worker_pool.rs  worktree.rs
crates/jankurai-runner/src/bin_main/: dispatch.rs
crates/jankurai-runner/src/daemon_store/: model.rs  reasoning.rs
crates/jankurai-runner/src/hero_judge/: summary.rs
crates/jankurai-runner/src/hero_judge_runner_finalize/: summary.rs
crates/jankurai-runner/src/hero_judge_runner_flow/: setup.rs
crates/jankurai-runner/src/memory/: embedder.rs  mod.rs  retrieval.rs  tests.rs
crates/jankurai-runner/src/model_client/: fake.rs  runtime.rs  tool_mode.rs  types.rs
crates/jankurai-runner/src/reasoning/: config.rs  memory.rs  tests.rs
crates/jankurai-runner/src/reasoning_runner/: orchestrator.rs  phases.rs  tests.rs
crates/jankurai-runner/src/run_summary/: build.rs  tests.rs  write.rs
crates/jankurai-runner/src/stage0_proof/: parser.rs
crates/jankurai-runner/src/superreasoning/: config.rs  packet.rs  paths.rs  tests.rs
crates/jankurai-runner/src/watcher/: metrics.rs  remediation.rs
crates/jankurai-runner/tests/: hero_judge_tests.rs  runner_tests.rs  worktree_lifecycle.rs
crates/jekko-cli/: Cargo.toml
crates/jekko-cli/src/: cli.rs  lib.rs  main.rs  migration_ui.rs  runtime.rs
crates/jekko-cli/src/cmd/: acp.rs  agent.rs  daemon.rs  db.rs  debug.rs  export.rs  github.rs  import.rs  jankurai.rs  jnoccio.rs  keys.rs  mcp.rs  mod.rs  models.rs  plugin.rs  port_run.rs  pr.rs  providers.rs  run.rs  serve.rs  session.rs  stats.rs  tui.rs  uninstall.rs  upgrade.rs  watch.rs
crates/jekko-cli/src/config_loader/: env.rs  mod.rs  (+5 more)
crates/jekko-cli/tests/: help_smoke.rs  mcp_adversarial.rs  mcp_attach.rs  mcp_detach.rs  mcp_list.rs  mcp_preset.rs  mcp_status.rs  port_run_declarative.rs  port_run_super.rs  run_help.rs  serve_help.rs  session_help.rs  version_smoke.rs  watch_cli.rs
crates/jekko-jnoccio-boot/: Cargo.toml
crates/jekko-jnoccio-boot/src/: health.rs  lib.rs  poller.rs  secret_unlock.rs  spawn.rs  unlock.rs
crates/jekko-plugin-api/: Cargo.toml
crates/jekko-plugin-api/src/: error.rs  lib.rs  manifest.rs  migration.rs  registry.rs
crates/jekko-plugin-api/tests/: manifest.rs  migration.rs  registry.rs
crates/jekko-provider/: Cargo.toml
crates/jekko-provider/src/: adapter.rs  catalog.rs  error.rs  key_pool.rs  lib.rs  routing.rs  setup.rs
crates/jekko-provider/tests/: sse_parity.rs  stream_e2e.rs  transform_parity.rs
crates/jekko-runtime/: Cargo.toml
crates/jekko-runtime/src/: account.rs  agent.rs  auth.rs  autonomy.rs  bus.rs  compaction.rs  daemon.rs  daemon_transport.rs  error.rs  file.rs  key_balancer.rs  lib.rs  lsp.rs  mcp.rs  message.rs  permission.rs  processor.rs  project.rs  prompt.rs  pty.rs  question.rs  ripgrep.rs  session.rs  session_budget.rs  shell.rs  skill.rs  snapshot.rs  status.rs  watcher.rs  workspace.rs
crates/jekko-runtime/tests/: compaction_fixture.rs  runtime_smoke.rs  webfetch_smoke.rs  websearch_smoke.rs
crates/jekko-server/: Cargo.toml
crates/jekko-server/src/: app.rs  auth.rs  cors.rs  error.rs  lib.rs  state.rs
crates/jekko-server/tests/: app_smoke.rs  auth_middleware.rs  config_routes.rs  cors_preflight.rs  experimental_routes.rs  file_routes.rs  openapi_generation.rs  permission_routes.rs  session_routes.rs  sse_smoke.rs  tui_routes.rs  workspace_routes.rs
crates/jekko-tui/: Cargo.toml
crates/jekko-tui/benches/: append_10k.rs  cold_start.rs  idle_cpu.rs  resize_relayout.rs  scroll_100k.rs
crates/jekko-tui/resources/: claude_md_starter.md
crates/jekko-tui/src/: action.rs  activity.rs  anim.rs  app.rs  background.rs  chat_bridge.rs  chat_bridge_backend.rs  engagement.rs  format.rs  glyph_set.rs  inline_runtime.rs  keybind.rs  lib.rs  lifecycle.rs  mouse.rs  osc52.rs  startup_screen.rs  theme.rs  watchdog.rs
crates/jekko-tui/tests/: app_dispatch_keys.rs  app_route_snapshots.rs  component_snapshots.rs  dialog_interaction.rs  feature_plugins_smoke.rs  inline_snapshots.rs  output_pager_snapshots.rs  prompt_frecency.rs  prompt_grapheme_cursor.rs  prompt_history.rs  prompt_mentions.rs  prompt_paste_summary.rs  prompt_slash.rs  prompt_stash.rs  prompt_unicode_width.rs  prompt_widget.rs  session_route_snapshots.rs  shell_layout_regression.rs  shell_route_snapshots.rs  tui_restoration_render.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: close_issues.rs  close_stale_prs.rs  compliance_close.rs  contributor_label.rs  duplicate_issues.rs  github_run.rs  live_prod.rs  main.rs  migrations.rs  notify_discord.rs  pr_compliance.rs  pr_info.rs  pr_management.rs  pr_standards.rs  pr_workflow_contract.rs  publish_build_plan.rs  publish_docker_image.rs  publish_npm_package.rs  publish_release.rs  publish_release_artifacts.rs  publish_release_package.rs  publish_release_registry.rs  publish_stage_cli_assets.rs  publish_sync_release_files.rs  publish_version.rs  review.rs  runtime_checks.rs  shared.rs  triage.rs
crates/zyal-supervisor/: Cargo.toml
crates/zyal-supervisor/src/: lib.rs  model.rs  planner.rs  store.rs
tools/autoresearch/: Cargo.toml
tools/autoresearch/src/: main.rs
(+934 files in other folders)
