[workspace]
resolver = "2"
members = [
  "crates/jekko-cli",
  "crates/jekko-core",
  "crates/jekko-jnoccio-boot",
  "crates/jekko-plugin-api",
  "crates/jekko-provider",
  "crates/jekko-runtime",
  "crates/jekko-server",
  "crates/jekko-store",
  "crates/jekko-tui",
  "crates/tuiwright-jekko-unlock",
  "crates/xtask",
  "crates/jankurai",
  "crates/jankurai-runner",
  "mini-fleet-smoke",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
