[package]
name = "jankurai-runner"
version = "0.1.0"
edition = "2021"
publish = false
description = "Headless jankurai forever-runner: classifies findings, builds a path-overlap DAG, takes locks, runs work in worktrees, commits on green, rolls back on red, emits NDJSON events."

[lib]
name = "jankurai_runner"
path = "src/lib.rs"

[[bin]]
name = "jankurai-runner"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
thiserror = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "fs"] }

[dev-dependencies]
tempfile = "3"
