[package]
name = "jekko-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "jekko"
path = "src/main.rs"

[lib]
name = "jekko_cli"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
jekko-core = { path = "../jekko-core" }
jekko-jnoccio-boot = { path = "../jekko-jnoccio-boot" }
jekko-provider = { path = "../jekko-provider" }
jekko-runtime = { path = "../jekko-runtime" }
jekko-plugin-api = { path = "../jekko-plugin-api" }
jekko-store = { path = "../jekko-store" }
jekko-tui = { path = "../jekko-tui" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
