[package]
name = "jekko-jnoccio-boot"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10"
anyhow = { workspace = true }
base64 = "0.22"
scrypt = "0.11"
thiserror = { workspace = true }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
