[package]
name = "jekko-plugin-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
semver = { version = "1", features = ["serde"] }
toml = "0.8"

[dev-dependencies]
serde_json = { workspace = true }
