[package]
name = "jekko-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = "1"
chrono = { workspace = true }
futures-util = "0.3"
jekko-core = { path = "../jekko-core" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "io-util", "net"] }
