[package]
name = "jekko-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures-util = "0.3"
jekko-provider = { path = "../jekko-provider" }
jekko-jnoccio-boot = { path = "../jekko-jnoccio-boot" }
jekko-core = { path = "../jekko-core" }
jekko-store = { path = "../jekko-store" }
zyal-core = { path = "../zyal-core" }
notify = "6"
portable-pty = "0.8"
rand = "0.8"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8"
tracing = "0.1"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serial_test = "3"
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
