[package]
name = "jekko-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "openapi-dump"
path = "src/bin/openapi_dump.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { version = "0.7", features = ["ws", "macros"] }
bytes = "1"
chrono = { workspace = true, features = ["clock", "serde"] }
futures-util = "0.3"
http = "1"
http-body-util = "0.1"
hyper = "1"
jekko-core = { path = "../jekko-core" }
jekko-plugin-api = { path = "../jekko-plugin-api" }
jekko-provider = { path = "../jekko-provider" }
jekko-runtime = { path = "../jekko-runtime" }
jekko-store = { path = "../jekko-store" }
portable-pty = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
