[package]
name = "jekko-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
crossterm = "0.29"
jekko-core = { path = "../jekko-core" }
zyalc = { path = "../zyalc" }
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
tui-textarea = { version = "0.6", default-features = false, features = ["no-backend"] }
unicode-segmentation = "1"
unicode-width = "0.2"

[dev-dependencies]
insta = "1"
serial_test = "3"
