[package]
name = "jekko-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = "0.3"
ignore = "0.4"
indexmap = "2"
jekko-core = { path = "../jekko-core" }
portable-pty = "0.9"
pulldown-cmark = { version = "0.13.3", default-features = false }
syntect = { version = "5.3.0", default-features = false, features = ["default-syntaxes", "regex-fancy"] }
zyalc = { path = "../zyalc" }
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "time", "macros", "process", "io-util"] }
tracing = "0.1"
tui-textarea = { version = "0.6", default-features = false, features = ["no-backend"] }
unicode-segmentation = "1"
unicode-width = "0.2"
vt100 = "0.16"

# Linux-only: landlock (kernel 5.13+) for in-process filesystem isolation
# applied via `Command::pre_exec`. The crate compiles only on Linux; the
# `sandbox_linux` module is cfg-gated so the rest of jekko-tui builds on
# macOS/Windows without pulling this dep. See `engine/sandbox_linux.rs`
# and T-SANDBOX-FS-ISOLATION-LINUX.
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1"
serial_test = "3"
tempfile = "3"

[[bench]]
name = "scroll_100k"
harness = false

[[bench]]
name = "append_10k"
harness = false

[[bench]]
name = "cold_start"
harness = false

[[bench]]
name = "idle_cpu"
harness = false

[[bench]]
name = "resize_relayout"
harness = false
