[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
jekko-core = { path = "../jekko-core" }
jekko-store = { path = "../jekko-store" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = "0.10"
hex = "0.4"
regex = "1"
semver = "1"

[dev-dependencies]
tempfile = "3"
