[package]
name = "autoresearch"
version = "0.1.0"
edition = "2021"
publish = false
description = "AutoResearch orchestrator for the memory benchmark chase loop"

[[bin]]
name = "autoresearch"
path = "src/main.rs"

# Zero external dependencies (matches memory-benchmark + cogcore policy).
[dependencies]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
